--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "@plasmicapp/loader-nextjs": "^1.0.427",
     "next": "14.2.29",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "devDependencies": {
     "eslint": "^8",
