--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@plasmicapp/loader-nextjs": "^1.0.427",
+    "@plasmicapp/react-web": "^0.2.388",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.17",
+    "framer-motion": "^12.15.0",
     "next": "14.2.29",
+    "postcss": "^8.4.35",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "eslint": "^8",
